# ownerrez-api

./: LICENSE  README.md  main.py  owner_rez_api_template_requests.py  owner_rez_api_user.py  pyproject.toml  requirements.txt  template_requests.py
.space/: backend.devfile.yaml
src/: api_template_requests.py  api_user.py  owner_rez_api_template_requests.py  owner_rez_api_user.py
tests/: test_gets.py
