[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ownerrez-api"
version = "0.0.1"
description = "Helper for Application Programming Development on OwnerRez"
readme = "README.md"
authors = [{ name = "Robin Michael", email = "siliconrob@siliconheaven.net" }]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["OwnerRez", "API"]

dependencies = [ "furl", "httpx", "stamina", "" ]

requires-python = ">=3.11"


[project.urls]
Homepage = "https://github.com/Siliconrob/ownerrez-api"

[project.scripts]
tate = "annotation.annotate:main"
showlbls = "tools.visualize:main"