[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ownerrez-api"
version = "0.0.2"
description = "Helper for Application Programming Development on OwnerRez"
readme = "README.md"
authors = [{ name = "Robin Michael", email = "siliconrob@siliconheaven.net" }]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["OwnerRez", "API"]

dependencies = [ "furl", "httpx", "stamina", "pep508" ]

requires-python = ">=3.13"


[project.urls]
Homepage = "https://github.com/Siliconrob/ownerrez-api"

[project.scripts]
tate = "annotation.annotate:main"
showlbls = "tools.visualize:main"